PostGIS 3.3.9dev
xxxx-xx-xx

PostgreSQL 11-17 required. GEOS 3.6+ required but GEOS 3.11+ to take advantage of all features.
Proj 4.9+ required.

* Bug Fixes and Enhancements *

 - #5922, [topology] Fix crash in TopoGeo_AddLinestring with EMPTY input (Sandro Santilli)
 - #5908, [topology] Fix crash in GetFaceContainingPoint (Sandro Santilli)
 - #5907, [topology] Fix crash in TopoGeo_AddPolygon with EMPTY input (Sandro Santilli)
 - #5876, Fix ST_AddPoint with empty point argument (Paul Ramsey)
 - #5829, geometry_columns with non-standard constraints (Paul Ramsey)
 - #5818, GT-244 Fix CG_IsSolid function (Loïc Bartoletti)
 - #5885, Fix documentation about grid-based overlay operations (Sandro Santilli)
 - #5921, Crash freeing uninitialized pointer (Arsenii Mukhin)
 - #5912, Crash on GML with xlink and no prefix (Paul Ramsey)
 - #5905, Crash on deeply nested geometries (Paul Ramsey)
 - #5909, ST_ValueCount crashes on empty table (Paul Ramsey)
 - #5917, ST_Relate becomes unresponsive (Paul Ramsey)


PostGIS 3.3.8
2024-12-22

PostgreSQL 11-17 required. GEOS 3.6+ required but GEOS 3.11+ to take advantage of all features.
Proj 4.9+ required.

* Bug Fixes and Enhancements *

 - #5785, [raster] ST_MapAlgebra segfaults when expression references
          a supernumerary rast argument (Dian M Fay)
 - #5787, [topology] Check that ST_ChangeEdgeGeom doesn't change winding of rings
          (Sandro Santilli)
 - #5795, [topology] Fix ST_NewEdgesSplit can cause invalid topology
          (Björn Harrtell)
 - #5677, Retain SRID during unary union (Paul Ramsey)
 - #5925, #5946, [topology] Have GetFaceContainingPoint survive EMPTY edges (Sandro Santilli)

* Enhancements *

  - #5782, [topology] Improve robustness of min distance calculation (Sandro Santilli)

* Breaking Changes *

  - #5799, make ST_TileEnvelope clips envelopes to tile plane extent (Paul Ramsey)


PostGIS 3.3.7
2024-09-05

This version requires PostgreSQL 11-17, GEOS 3.6 or higher, and Proj 4.9+