@@ -151,3 +151,4 @@ Topology 't' dropped
 #1998.N-|2
 #1998.M2|LINESTRING(1 1,1 0,0 0,0 1,1 1)
 #1998.-|Topology 't1998' dropped
+t5947|1
